--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon index.js",
-        "build:ui": "rm -rf dist && cd ../frontend/ && npm run build && cp -r dist ../backend/",
+        "build:ui": "rm -rf dist && cd ./vite/ && npm run build && cp -r dist ..",
         "deploy:latest": "npm run build:ui && git add . && git commit -m deployment_script && git push",
         "start": "node index.js"
     },
