--- a/vite/package.json
+++ b/vite/package.json
@@ -13,7 +13,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
-    "leaflet-arrowheads": "^1.4.0",
+    "leaflet-polylinedecorator": "^1.6.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
