--- a/vite/package.json
+++ b/vite/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.7.0",
+    "react-swipeable": "^7.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
